Add another scripts

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <p>First</p>
     <script>
-        console.log("sync:", document.querySelectorAll('p').length);
+        console.log("sync 1:", document.querySelectorAll('p').length);
     </script>
     <p>Second</p>
+    <script>
+        console.log("sync 2:", document.querySelectorAll('p').length);
+    </script>
 </body>
 </html>
